# pcbasic

./: .gitattributes  .gitignore  .gitmodules  ABOUT  ACKNOWLEDGEMENTS.md  BUGS.md  BUILD.md  BUILDING.md  CC-BY-SA  CONTRIBUTING.md  COPYING  DESCRIPTION.md  DEVELOPMENT.md  HACKING.md  HELP  INFO.BAS  INSTALL.md  ISSUE_TEMPLATE.md  LICENSE.md  MANIFEST.in  README.md  SOURCE.md  THANKS.md  ansi.py  ansipipe.py  audio_beep.py  audio_none.py  audio_pygame.py  automode.py  backend.py  backend_ansi.py  backend_cli.py  backend_curses.py  backend_dumb.py  backend_pygame.py  basictoken.py  bytestream.py  cassette.py  clipboard.py  config.py  (+101 more)
.github/: ISSUE_TEMPLATE.md
basic/: __init__.py  cassette.py  console.py  debug.py  devices.py  disk.py  display.py  draw_and_play.py  events.py  files.py  functions.py  graphics.py  inputs.py  interpreter.py  machine.py  memory.py  modes.py  operators.py  parser.py  ports.py  print_and_input.py  program.py  representation.py  rnd.py  shell.py  sound.py  statements.py  timedate.py  tokenise.py  typeface.py  unicodepage.py  util.py  var.py  vartypes.py
bitfonts/: pcjr.08
config/: README
cpi/: ega.cpi  ega10.cpi  ega4.cpi
data/: VERSION
doc/: CC-BY-SA.txt  docstyle.css
docs/: __init__.py  doc.css  doc.py  documentation.html  htmldoc.py  man.py  options.html  reference.html  usage.py
docsrc/: ABOUT  HELP.html  LICENSE.md  USAGE.html  __init__.py  acknowledgements.html  description.html  description.txt  devguide.html  doc.css  doc.py  doclicense.html  docstyle.css  documentation.html  examples.html  guide.html  header.html  makedoc.py  makedoc.sh  makeman.py  makeman.sh  maketoc.py  makeusage.py  makeusage.sh  man.py  mdtohtml.py  moreman.html  options.html  prepare.py  reference.html  settings.html  tagline.txt  techref.html  usage.py
encoding/: 437.ucp  (+73 more)
(+2631 files in other folders)
