[build-system]
requires = [
    "hatchling>=1.6.0",
    "hatch-nodejs-version",
    "lxml", "markdown", "pylint", "coverage", "cx_Freeze", "pillow", "colorama", "toml"
]
build-backend = "hatchling.build"

[project]
name = "pcbasic"
authors = [
    { name = "Rob Hagemans", email = "rob.hagemans@hotmail.com" },
]
description = "A free, cross-platform emulator for the GW-BASIC family of interpreters."
readme = "README.md"
license = { text = "GPLv3" }
requires-python = ">=2.7.17,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,!=3.5.*"
dependencies = [
    "pysdl2-dll",
    "pyserial",
    "importlib_resources",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Topic :: System :: Emulators",
    "Topic :: Software Development :: Interpreters",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.6",
]
keywords = [
    "emulator", "interpreter", "basic", "retro", "legacy", "gwbasic", "basica", "pcjr", "tandy",
]
dynamic = [
    "version",
]

[project.urls]
"Homepage" = "http://pc-basic.org"
"Bug Tracker" = "https://github.com/robhagemans/pcbasic/issues"
"Source Code" = "https://github.com/robhagemans/pcbasic/"

[project.optional-dependencies]
full = [
    "pyparallel", "pyaudio",
]

[project.scripts]
pcbasic = "pcbasic:main"

[tool.hatch.version]
source = "nodejs"
path = "./pcbasic/basic/data/meta.json"

[tool.hatch.build]
artifacts = [
  "/doc/*.html",
  "/pcbasic/basic/data/release.json",
]

[tool.hatch.build.targets.sdist]
include = [
    "/pcbasic",
    "GPL3.txt",
    "/*.md",
]
